--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <img src="/Assets/images/ChurchPhoto-vignette.png" alt="Church Photo" class="photo" />
-    <!-- NAV ####################################################-->
+    <!-- NAV ############################-->
     <nav class="navbar">
       <div class="text-logo">
         <a href="index.html">Logo</a>
