fix github pages file pathing error

--- a/ccd.html
+++ b/ccd.html
@@ -116,13 +116,13 @@
 
     </div> 
   
-    <div class="ccd-communicant-image-box"><img src="/Assets/images/first-communion-photo.jpg"></div> 
+    <div class="ccd-communicant-image-box"><img src="./Assets/images/first-communion-photo.jpg"></div> 
 
 </div>
 
 <div class="ccd-middle-box3">
 
-    <div class="ccd-catechist-image-box"><img src="/Assets/images/catechist-photo.jpg"></div> 
+    <div class="ccd-catechist-image-box"><img src="./Assets/images/catechist-photo.jpg"></div> 
     <div class="ccd-content-middle-box3">
 
       <div class="content">
