--- a/connect-learn.html
+++ b/connect-learn.html
@@ -95,7 +95,7 @@
 
         </div> 
         <div class="baptism-image-box">
-          <img src="/Assets/images/baptism.jpg"/>
+          <img src="./Assets/images/baptism.jpg"/>
         </div> 
 
    </div> 
@@ -110,7 +110,7 @@
 <div class="marriage-box" id="marriage-box">
  
     <div class="marriage-image-box">
-        <img src="/Assets/images/Marriage-photo.jpg"/>
+        <img src="./Assets/images/Marriage-photo.jpg"/>
     </div> 
        
     <div class="marriage-content-box">
@@ -134,7 +134,7 @@
 
     </div>       
     <div class="homebound-image-box">
-      <img src="/Assets/images/homebound-photo.jpg"/> 
+      <img src="./Assets/images/homebound-photo.jpg"/> 
     </div>    
 </div>  
 <!-- End Homebound -->
@@ -142,7 +142,7 @@
 <!-- 4 ANOINTING -->
 <div class="anointing-box" id="anointing-box">
     <div class="anointing-image-box">
-      <img src="/Assets/images/anointing-photo.png"/>
+      <img src="./Assets/images/anointing-photo.png"/>
     </div>
     <div class="anointing-content-box">
            <div class="title">Anointing of the Sick.</div>  
@@ -162,7 +162,7 @@
           <div class="content"><br>The loss of a loved one is a time of sadness and grief. However, in our faith there is joy in the belief that a funeral represents the passing of the beloved into eternal life -- a realization that brings great at this difficult time. <br><br>At the time of death, the funeral home is usually called first. Their staff will offer compassionate services and will call the church to schedule a funeral Mass. <br><br>The funeral mass is where we gather to give praise and thanks for Christ’s victory over sin and death, to commend the deceased to God’s tender mercy and compassion, and to seek strength in this time of need. Beyond merely an expression of grief, the funeral mass is an act of worship.</div> 
           <br><br>
       </div>
-      <div class="funeral-image-box"><img src="/Assets/images/pieta.jpg"></div>
+      <div class="funeral-image-box"><img src="./Assets/images/pieta.jpg"></div>
 
 </div>  
 
