--- a/connect.html
+++ b/connect.html
@@ -126,7 +126,7 @@
         </div> 
         <div class="bottom-box-right-for-image">
           <br>
-          <img src="/Assets/images/Church People Praying.jpg"/>
+          <img src="./Assets/images/Church People Praying.jpg"/>
         </div> 
 
     </div> 
