--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
   </head>
   <body>
-    <img src="/Assets/images/ChurchPhoto-vignette.png" alt="Church Photo" class="photo" />
+    <img src="./Assets/images/ChurchPhoto-vignette.png" alt="Church Photo" class="photo" />
     <!-- NAVbar ############################-->
     <nav class="navbar">
       <div class="text-logo">
