--- a/worship.html
+++ b/worship.html
@@ -157,7 +157,7 @@
     <div class="seasonal-info-box">
         <div class="seasonal-img-box">
             <video autoplay>
-              <source src="/Assets/Candle-video.mp4" type="video/mp4">
+              <source src="./Assets/Candle-video.mp4" type="video/mp4">
             </video>
         </div>
         <div class="seasonal-schedule-box"> 
