from /CSS to ./CSS

--- a/connect.html
+++ b/connect.html
@@ -3,13 +3,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saint James The Less</title>
-    <link rel="stylesheet" href="/CSS-Connect/c-style.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-navbar.css" />
-    <link rel="stylesheet" href="/CSS/dropdown.css" />
-    <link rel="stylesheet" href="/CSS-Connect/c-church-name-box.css">
-    <link rel="stylesheet" href="/CSS-Welcome/w-masstimes-overlay.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-fixed-button.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-footer.css" />
+    <link rel="stylesheet" href="./CSS-Connect/c-style.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-navbar.css" />
+    <link rel="stylesheet" href="./CSS/dropdown.css" />
+    <link rel="stylesheet" href="./CSS-Connect/c-church-name-box.css">
+    <link rel="stylesheet" href="./CSS-Welcome/w-masstimes-overlay.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-fixed-button.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-footer.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
