from .CSS to /CSS also

--- a/worship.html
+++ b/worship.html
@@ -4,13 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Worship</title>
     <!-- <link rel="stylesheet" href="/CSS-Welcome/w-style.css" /> -->
-    <link rel="stylesheet" href="/CSS-Worship/wo-style.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-navbar.css" />
-    <link rel="stylesheet" href="/CSS/dropdown.css" />
-    <link rel="stylesheet" href="/CSS-Worship/wo-church-name-box.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-masstimes-overlay.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-fixed-button.css" />
-    <link rel="stylesheet" href="/CSS-Welcome/w-footer.css" />
+    <link rel="stylesheet" href="./CSS-Worship/wo-style.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-navbar.css" />
+    <link rel="stylesheet" href="./CSS/dropdown.css" />
+    <link rel="stylesheet" href="./CSS-Worship/wo-church-name-box.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-masstimes-overlay.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-fixed-button.css" />
+    <link rel="stylesheet" href="./CSS-Welcome/w-footer.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
