--- a/connect.html
+++ b/connect.html
@@ -74,6 +74,15 @@
         </div>
         <div class="dropdown">
           <a href="give.html">Give</a>
+          <div class="dropdown-content">
+            <a href="give.html">Stewardship.</a>
+            <div class="dropdown-subcontent">
+              <a href="give.html#time">Time</a>
+              <a href="give.html#talent">Talent</a>
+              <a href="give.html#treasure">Treasure</a>
+            </div>
+            <!-- <!- close "dropdown-content"> -- -->
+          </div>
           <!-- <!- close "dropdown"> for Give-- -->
         </div>
         <!-- <!- close  ="nav-links"> -- -->
