--- a/translate.html
+++ b/translate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saint James The Less</title>
+    <title>Iglesia Católica de Santiago El Menor</title>
     <link rel="stylesheet" href="./CSS/style.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
     <link rel="stylesheet" href="./CSS/dropdown.css" />
@@ -20,49 +20,49 @@
     <!-- NAVbar ############################-->
     <nav class="navbar">
       <div class="text-logo">
-        <a href="index.html">Logo</a>
+        <a href="translate.html">Logo</a>
         <!-- <img src="logo-placeholder.png" alt="Logo" class="logo-image" />  -->
       </div>
       <div class="nav-links">
         <div class="dropdown">
-          <a href="welcome.html">Welcome</a>
+          <a href="t-welcome.html">Bienvenido</a>
           <div class="dropdown-content">
-            <a href="welcome.html">Our Parish Mission</a>
-            <a href="welcome.html#parish-leadership">Our Servant Leaders</a>
+            <a href="t-welcome.html">Nuestra Misión Parroquial</a>
+            <a href="t-welcome.html#parish-leadership">Nuestros Líderes Sirvientes</a>
             <!-- <!- close "dropdown-content" for Welcome> -- -->
           </div>
           <!-- <!- close "dropdown" for Welcome> -- -->
         </div>
         <div class="dropdown">
-          <a href="worship.html">Worship</a>
+          <a href="t-worship.html">Adoración</a>
           <div class="dropdown-content">
-            <a href="worship.html">Mass Times</a>
-            <a href="worship.html#prayer-and-reconciliation-box">Prayer & Confession</a>
-            <a href="worship.html#seasonal-box">Our Lenten Schedule</a>
+            <a href="t-worship.html">Horarios de Misa</a>
+            <a href="t-worship.html#prayer-and-reconciliation-box">Oración y Confesión</a>
+            <a href="t-worship.html#seasonal-box">Nuestro Horario de Cuaresma</a>
             <!-- <!- close "dropdown-content" for Worship> -- -->
           </div>
           <!-- <!-close "dropdown"> for Worship-- -->
         </div>
         <div class="dropdown">
-          <a href="connect.html">Connect</a>
+          <a href="t-connect.html">Conectar</a>
           <div class="dropdown-content">
-            <a href="connect.html">Be one of us.</a>
+            <a href="t-connect.html">Sé una de nosotras</a>
             <div class="dropdown-subcontent">
-              <a href="connect.html">Parish Membership</a>
+              <a href="t-connect.html">Membresía parroquial</a>
               <!-- <!-close dropdown-subcontent -- -->
             </div>
-            <a href="connect-learn.html">Learn with us.</a>
+            <a href="t-connect-learn.html">Aprende con nosotros.</a>
             <div class="dropdown-subcontent">
-              <a href="connect-learn.html">Baptism</a>
-              <a href="connect-learn.html#marriage-box">Marriage</a>
-              <a href="connect-learn.html#homebound-box">Communion For The Homebound</a>
-              <a href="connect-learn.html#anointing-box">Anointing of the Sick</a>
-              <a href="connect-learn.html#funeral-box">Funeral Planning</a>
+              <a href="t-connect-learn.html">Bautismo</a>
+              <a href="t-connect-learn.html#marriage-box">El Matrimonio</a>
+              <a href="t-connect-learn.html#homebound-box">Comunión para los Confinados en Casa</a>
+              <a href="t-connect-learn.html#anointing-box">Unción de los Enfermos</a>
+              <a href="t-connect-learn.html#funeral-box">Santa Misa Funeral</a>
               <!-- <!- close "dropdown-subcontent"> -- -->
             </div>
-            <a href="ccd.html">Grow with us.</a>
+            <a href="t-ccd.html">Crecer con nosotros.</a>
             <div class="dropdown-subcontent">
-              <a href="ccd.html">Religious Education (CCD)</a>
+              <a href="t-ccd.html">Educación Religiosa(CCD)</a>
               <!-- <!-close dropdown-subcontent -- -->
             </div>
             <!-- <!- close "dropdown-content"> -- -->
@@ -70,17 +70,17 @@
           <!-- <!-close "dropdown"> for Connect-- -->
         </div>
         <div class="dropdown">
-          <a href="translate.html">Translate</a>
+          <a href="index.html">Traducir</a>
           <!-- <!- close "dropdown"> for Give-- -->
         </div>
-        <div class="dropdown">  
-            <a href="give.html">Give</a>
+        <div class="dropdown">
+          <a href="t-give.html">Dar</a>
             <div class="dropdown-content">
-                <a href="give.html">Stewardship.</a>
+                <a href="t-give.html">Mayordomia.</a>
                 <div class="dropdown-subcontent">
-                    <a href="give.html#time">Time</a>
-                    <a href="give.html#talent">Talent</a>
-                    <a href="give.html#treasure">Treasure</a>
+                    <a href="t-give.html#time">Tiempo</a>
+                    <a href="t-give.html#talent">Talento</a>
+                    <a href="t-give.html#treasure">Tesoro</a>
                 </div>
             </div>
         </div>
@@ -89,10 +89,10 @@
     </nav>
     <!-- NAV CLOSE ##################################################-->
     <!-- CHURCH NAME BOX ##################################################-->
-    <div class="church-name-box">
-      <div class="text-james-less">ST. JAMES</div>
-      <div class="text-james-less">THE LESS</div>
-      <div class="text-roman">Roman Catholic Church</div>
+    <div class="church-name-box-for-translate-page">
+      <div class="text-iglesia">Iglesia Católica De</div>
+      <div class="text-james-less">SANTIAGO</div>
+      <div class="text-james-less">EL MENOR</div>
     </div>
     <!-- CLOSE CHURCH NAME BOX##################################################-->
 
@@ -100,64 +100,64 @@
 
 <!-- SECTION FOR MASSTIMES-OVERLAY TRIGGERED BY LINK IN FOOTER  -->
 <section id="masstimes">
-  <div class="container1">MASS TIMES & DIRECTIONS</div>
+  <div class="container1">HONORARIO DE MISA Y DIRECCIÓN A LA IGLESIA</div>
   <div class="container2">
     <div class="box21">
-      <div class="box2text">MASS</div>
+      <div class="box2text">MISA</div>
     </div>
     <div class="box22">
-      <div class="box2text">CONFESSION, et.al.</div>
+      <div class="box2text">CONFESIÓN, et.al.</div>
     </div>
-    <div class="box23"><div class="box2text"></div>MAP</div></div>
+    <div class="box23"><div class="box2text"></div>MAPA</div></div>
   </div>
   <div class="container3">
     <div class="box31">
       <ul>
-        <li>Sunday Mass Schedule</li>
+        <li>Domingo</li>
         <ul>
-          <li>Saturday at 4:00 pm</li>
-          <li>Sunday:</li>
+          <li>Sabado (Vigilia) at 4:00 pm</li>
+          <li>Domingo:</li>
           <ul>
             <li>8:00 am</li>
             <li>10:00 am</li>
-            <li>2:00 pm in Spanish</li>
+            <li>2:00 pm Misa en Español</li>
             <li>5:00 pm</li>
           </ul>
         </ul>
         <br />
-        <li>Daily Mass Schedule</li>
+        <li>Horario Diario</li>
         <ul>
-          <li>Monday-Friday 8:30 am</li>
+          <li>Lunes a Viernes 8:30 am</li>
         </ul>
       </ul>
     </div>
     <div class="box32">
       <ul>
-        <li>Confession</li>
+        <li>Confesión</li>
         <ul>
-          <li>Thursday at 4:30 pm</li>
-          <li>Saturday at 3:00 pm</li>
+          <li>Jueves, 4:30 pm</li>
+          <li>Sábado, 3:00 pm</li>
         </ul>
         <br />
-        <li>Eucharistic Adoration</li>
+        <li>Adoración Eucarística</li>
         <ul>
-          <li>Thursday at 5:00pm</li>
+          <li>Jueves, 5:00pm</li>
         </ul>
         <br />
-        <li>Recitation of The Most Holy Rosary</li>
+        <li>Rezo del Santísimo Rosario</li>
         <ul>
           <li>
-            before all masses on the first weekend
-            <div class="second-line">of the month</div>
+            antes de todas las misas el primer
+            <div class="second-line">fin de semana del mes</div>
           </li>
-          <li>Sunday at 1:00 pm in Spanish</li>
+          <li>Domingo, 1:00 pm en Español</li>
         </ul>
         <br />
-        <li>Prayer for Divine Mercy</li>
+        <li>Oración por la Divina Misericordia.</li>
         <ul>
           <li>
-            before the 10:00 am Sunday mass on
-            <div class="second-line">the second weekend of the month</div>
+            antes de la Misa del Domingo a las 10, 
+            <div class="second-line">el segundo fin de semana del mes</div>
           </li>
         </ul>
       </ul>
@@ -176,7 +176,7 @@
     
   </div>
   <div class="container4">
-    <button onclick="closeOverlay()">CLOSE</button>
+    <button onclick="closeOverlay()">SALIR</button>
   </div>
 </section>
 
@@ -191,7 +191,7 @@
         36 Lincoln Ave., Jamesburg, NJ | 732-521-0100
       </div>
       <div class="masstimes-and-directions-link">
-        <a href="#masstimes">Mass Times & Directions</a>
+        <a href="#masstimes">HONORARIO DE MISA Y DIRECCIÓN A LA IGLESIA</a>
       </div>
     </footer>
     <!-- FOOTER CLOSE ####################################################-->
